# textadept

./: .clang-format  .config.ld  .gitignore  .hgtags  .lua-format  .lua-lsp  .luacov  CHANGELOG.md  CMakeLists.txt  FAQ.md  LICENSE  MEDIA.md  README.md  TECHNOLOGY.md  THANKS.md  gen_iface.lua  init.lua  osx.patch  properties.lua  settings.lua
.github/: FUNDING.yml
.github/workflows/: cleanup.yml  release.yml
core/: ._G.lua  ._G.luadoc  ._M.luadoc  ._SCINTILLA.luadoc  ._m.lua  ._m.luadoc  .browser.lua  .buffer.lua  .buffer.luadoc  .command_entry.lua  .command_entry.luadoc  .find.lua  .find.luadoc  .gui.lua  .gui.luadoc  .iconv.luadoc  .os.luadoc  .pm.lua  .proc.luadoc  .textadept.lua  .ui.dialogs.luadoc  .view.lua  .view.luadoc  args.lua  args_test.lua  assert.lua  assert_test.lua  buffer_test.lua  compat.lua  events.lua  events_test.lua  file_io.lua  file_io_test.lua  gui.lua  handlers.lua  iface.lua  init.lua  init_test.lua  keys.lua  keys_test.lua  (+12 more)
core/ext/: command_entry.lua  find.lua  key_commands.lua  key_commands_mac.lua  key_commands_std.lua  keys.lua  menu.lua  mime_types.conf  mime_types.lua  pm.lua
core/ext/pm/: buffer_browser.lua  ctags_browser.lua  file_browser.lua  find_browser.lua  macro_browser.lua  modules_browser.lua  project_browser.lua
core/images/: textadept.icns
core/locales/: locale.ar.conf  locale.de.conf  locale.es.conf  locale.fr.conf  locale.it.conf  locale.pl.conf  locale.pt_BR.conf  locale.ru.conf  locale.sv.conf  locale.zh.conf
doc/: .api_index.md  .footer.md  .header.md  01_Introduction.md  02_Installation.md  03_UserInterface.md  04_WorkingWithFiles.md  05_FileNavigation.md  06_AdeptEditing.md  07_Modules.md  08_Preferences.md  08_Themes.md  09_Preferences.md  09_Themes.md  10_Advanced.md  11_Scripting.md  12_Compiling.md  13_Help.md  14_Appendix.md  footer.md  gen_manual.lua  header.md  index.html  manual.md  markdowndoc.lua  sidebar.md  style.css
doc/manual/: 02_Installation.md  07_Modules.md  09_Preferences.md  10_Advanced.md  11_Scripting.md  12_Compiling.md  13_Help.md  14_Appendix.md  1_Introduction.md  2_Installation.md  3_Compiling.md  3_UserInterface.md  4_UserInterface.md  4_WorkingWithFiles.md  5_FileNavigation.md  5_FolderStructure.md  6_AdeptEditing.md  6_Startup.md  7_LuaInterface.md  7_Modules.md  8_Themes.md  9_Preferences.md
docs/: api.md  book.md  changelog.md  faq.md  index.html  manual.md  markdowndoc.lua  media.md  style.css  thanks.md
docs/_layouts/: default.html
modules/: new
modules/ansi_c/: api  init.lua  lua_api  lua_tags  tags
modules/cpp/: adeptsense.lua  api  commands.lua  init.lua  lua_api  snippets.lua  tags
modules/lua/: adeptsense.lua  adeptsensedoc.lua  api  commands.lua  init.lua  lua.luadoc  snippets.lua  ta_api  ta_tags  tadoc.lua  tags
modules/lua/api/: _G.luadoc  coroutine.luadoc  debug.luadoc  io.luadoc  math.luadoc  os.luadoc  string.luadoc  table.luadoc
modules/textadept/: adeptsense.lua  bookmarks.lua  bookmarks_test.lua  command_entry.lua  command_entry_test.lua  editing.lua  editing_test.lua  file_types.lua  filter_through.lua  find.lua  find_test.lua  history.lua  history_test.lua  init.lua  key_commands.lua  keys.conf  keys.lua  keys.osx.conf  keys_test.lua  lsnippets.lua  macros.lua  macros_test.lua  menu.lua  menu_test.lua  mime_types.conf  mime_types.lua  mlines.lua  run.lua  run_test.lua  session.lua  session_test.lua  snapopen.lua  snippets.lua  snippets_test.lua
scripts/: adeptsensedoc.lua  backport.sh  codecov.sh  count.sh  fill_layout.lua  gen_cov.lua  gen_doc.lua  gen_docs.sh  gen_iface.lua  gen_lua_c_api_tags.lua  gen_plist.lua  gen_plot.lua  gen_plots.sh  luadoc.patch  markdowndoc.lua  update_doc
scripts/osx/: ta  textadept  textadept_osx
src/: Dockerfile  Info.plist  Makefile  cdk.patch  find_replace.c  gtkosx.patch  iconv.patch  lfs.patch  lua.patch  lua.sym  lua_interface.c  luacov.patch  luadoc.patch  luajit.patch  lutf8libext.patch  lutf8libjit.patch  pdcurses.patch  platform.h  pm.c  properties.h  scintilla.patch  termkey.patch  textadept-curses.desktop  textadept-gtk.desktop  textadept-qt.desktop  textadept.c  textadept.desktop  textadept.h  textadept.rc  textadept_curses.c  textadept_gtk.c  textadept_platform.h  textadept_qt.cpp  textadept_qt.h  textadept_qt.ui  tre.patch  winapi.patch
src/scintilla_backports/: 6095_ae52e0c68190.patch  6097_7f22895eaddb.patch  6099_809112c81196.patch  6101_b82fe8d33961.patch  6102_e12538e52567.patch  6108_b833c0659497.patch  6111_225f39cfd931.patch  6116_6c62b379a52e.patch  6117_23546875480b.patch  6118_559dea66606f.patch  6119_71bee2f06619.patch  6120_8e0cb37c4972.patch  6124_4527b3c217a4.patch  6131_a78e38849624.patch  6132_6cf19f2bf214.patch  6133_30f1573f17ac.patch  6134_0253f113f223.patch  6135_34665edc7efd.patch  6136_2b25287311d0.patch  6137_c3bba4a9193e.patch  6138_55368b05bb72.patch  6145_b3eaa82b3750.patch  6153_a0f26eaf474d.patch  6154_284cc3b0e754.patch  6155_c105254dae66.patch  6156_152e56f0b392.patch  6157_35d652a3344b.patch  6158_47fa874827a5.patch  6159_67865d8e5a37.patch  6160_a1a9cde51997.patch  6161_e7ca78c6f29c.patch  6167_797ed6c538fd.patch  6168_d046ce80d590.patch  6170_df221375187c.patch  6171_99e46ea84433.patch  6172_84161436cfbc.patch  6173_c9dcde8a91d3.patch  6174_150bdfbe2b5a.patch  6175_d742ec177a7e.patch  6176_20120f9d1698.patch  (+40 more)
test/: helpers.lua  helpers_test.lua  test.lua  test_core_view.lua
test/file_io/: binary  cp1252  crlf  spaces  tabs  utf16  utf8
test/modules/ctags/c/include/: foo.h
test/modules/ctags/c/src/: foo.c
test/modules/ctags/lua/: foo.lua
test/modules/debugger/ansi_c/: foo.c
test/modules/debugger/lua/: foo.lua
test/modules/file_diff/: 1  2
test/modules/textadept/editing/: api  api2
test/modules/textadept/run/: build.lua  compile.lua  foo.lua  run.lua  test.lua
test/themes/: tomorrow.lua
test/ui/: test.lua
themes/: dark.lua  light.lua  term.lua
themes/dark/: buffer.lua  lexer.lua  view.lua
themes/light/: buffer.lua  lexer.lua  view.lua
themes/scite/: buffer.lua  lexer.lua  view.lua
themes/term/: buffer.lua  lexer.lua  view.lua
